--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 *.tex
 *.png
 *.jpeg
-.pdf
+*.pdf
 .Rproj.user
 .Rhistory
 .RData
@@ -15,4 +15,9 @@
 *_cache*
 *.ttt
 *.fff
+*.bbl
+*.bcf
+*.xml
+*.blg
+
 
